* Address feedback. * Remove outdated comments.
Signed-off-by: Colin Hryniowski <colin.hryniowski@dell.com>